RESOLVED FIXED 261664
css/filter-effects/backdrop-filter-plus-filter.html fails
https://bugs.webkit.org/show_bug.cgi?id=261664
Summary css/filter-effects/backdrop-filter-plus-filter.html fails
Matt Woodrow
Reported 2023-09-17 20:56:41 PDT
Combining filter and backdrop-filter on the same element isn't rendering correctly.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-09-17 20:56:48 PDT
Matt Woodrow
Comment 2 2023-09-18 17:24:43 PDT
EWS
Comment 3 2023-09-20 01:36:02 PDT
Committed 268187@main (bbffe15319f3): <https://commits.webkit.org/268187@main> Reviewed commits have been landed. Closing PR #17889 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.