css/filter-effects/backdrop-filter-plus-filter.html fails because the filter isn't set on the structural layer. https://bugs.webkit.org/show_bug.cgi?id=261664 <rdar://115638630>

Reviewed by Simon Fraser.

If we have a structural layer to wrap the backdrop layer and primary layer, then the filter should be applied to that outer layer to affect both.

* LayoutTests/TestExpectations:
* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::updateFilters):
(WebCore::GraphicsLayerCA::ensureStructuralLayer):

Canonical link: https://commits.webkit.org/268187@main